# p2pong

./: .gitignore  CMakeLists.txt  LICENSE  README.md  autocliplineedit.cpp  autocliplineedit.h  ball.cpp  ball.h  copy_ico.qrc  draggablewidget.cpp  draggablewidget.h  game.h  main.cpp  p2pong_he_IL.ts  paddle.cpp  paddle.h  player.cpp  player.h  pong.cpp  pong.h  pong.ui  pongview.cpp  pongview.h  username_dialog.cpp  username_dialog.h  username_dialog.ui
